--- a/SDL_RWFromFile.mediawiki
+++ b/SDL_RWFromFile.mediawiki
@@ -18,11 +18,11 @@ SDL_RWops* SDL_RWFromFile(const char* file,
 |^a pointer to the file containing the information to fill an [[SDL_RWops]] structure with^
 |-
 |'''mode'''
-|^a pointer to the mode to be used for/in the [[SDL_RWops]] structure^
+|^a pointer to the mode to be used for/in the [[SDL_RWops]] structure^; see [[#Remarks|Remarks]] for details
 |}
 
 == Return Value ==
-A pointer to the [[SDL_RWops]] structure that is created.
+A pointer to the [[SDL_RWops]] structure that is created, *or NULL on failure*.
 
 == Code Examples ==
 ```c++
@@ -30,7 +30,30 @@ You can add your code example here
 ```
 
 == Remarks ==
-''You can add useful comments here''
+<<Color2(green,The remarks are taken from the old wiki.  Are they still applicable?)>>
+
+Available '''mode''' strings:
+{|
+|r
+|Open a file for reading. The file must exist.
+|-
+|w
+|Create an empty file for writing. If a file with the same name already exists its content is erased and the file is treated as a new empty file.
+|-
+|a
+|Append to a file. Writing operations append data at the end of the file. The file is created if it does not exist.
+|-
+|r+
+|Open a file for update both reading and writing. The file must exist.
+|-
+|w+
+|Create an empty file for both reading and writing. If a file with the same name already exists its content is erased and the file is treated as a new empty file.
+|-
+|a+
+|Open a file for reading and appending. All writing operations are performed at the end of the file, protecting the previous content to be overwritten. You can reposition (fseek, rewind) the internal pointer to anywhere in the file for reading, but writing operations will move it back to the end of file. The file is created if it does not exist.
+|}
+
+NOTE: In order to open a file as a binary file, a "b" character has to be included in the '''mode''' string. This additional "b" character can either be appended at the end of the string (thus making the following compound modes: "rb", "wb", "ab", "r+b", "w+b", "a+b") or be inserted between the letter and the "+" sign for the mixed modes ("rb+", "wb+", "ab+"). Additional characters may follow the sequence, although they should have no effect. For example, "t" is sometimes appended to make explicit the file is a text file. 
 
 == Related Functions ==
 :[[SDL_RWFromConstMem]] ???
