remove struct link

--- a/SDL_RWFromFile.mediawiki
+++ b/SDL_RWFromFile.mediawiki
@@ -3,7 +3,7 @@
 '''DRAFT'''
 
 = SDL_RWFromFile =
-Use this function to create [[SDL_RWops]] structures from files.
+Use this function to create SDL_RWops structures from files.
 
 
 == Syntax ==
@@ -15,14 +15,14 @@ SDL_RWops* SDL_RWFromFile(const char* file,
 == Function Parameters ==
 {|
 |'''file'''
-|^a pointer to the file containing the information to fill an [[SDL_RWops]] structure with^
+|^a pointer to the file containing the information to fill an SDL_RWops structure with^
 |-
 |'''mode'''
-|^a pointer to the mode to be used for/in the [[SDL_RWops]] structure^; see [[#Remarks|Remarks]] for details
+|^a pointer to the mode to be used for/in the SDL_RWops structure^; see [[#Remarks|Remarks]] for details
 |}
 
 == Return Value ==
-A pointer to the [[SDL_RWops]] structure that is created, *or NULL on failure*.
+A pointer to the SDL_RWops structure that is created, *or NULL on failure*.
 
 == Code Examples ==
 ```c++
@@ -30,9 +30,7 @@ You can add your code example here
 ```
 
 == Remarks ==
-<<Color2(green,The remarks are taken from the old wiki.  Are they still applicable?)>>
-
-Available '''mode''' strings:
+*Available '''mode''' strings:
 {|
 |r
 |Open a file for reading. The file must exist.
@@ -53,7 +51,7 @@ Available '''mode''' strings:
 |Open a file for reading and appending. All writing operations are performed at the end of the file, protecting the previous content to be overwritten. You can reposition (fseek, rewind) the internal pointer to anywhere in the file for reading, but writing operations will move it back to the end of file. The file is created if it does not exist.
 |}
 
-NOTE: In order to open a file as a binary file, a "b" character has to be included in the '''mode''' string. This additional "b" character can either be appended at the end of the string (thus making the following compound modes: "rb", "wb", "ab", "r+b", "w+b", "a+b") or be inserted between the letter and the "+" sign for the mixed modes ("rb+", "wb+", "ab+"). Additional characters may follow the sequence, although they should have no effect. For example, "t" is sometimes appended to make explicit the file is a text file. 
+NOTE: In order to open a file as a binary file, a "b" character has to be included in the '''mode''' string. This additional "b" character can either be appended at the end of the string (thus making the following compound modes: "rb", "wb", "ab", "r+b", "w+b", "a+b") or be inserted between the letter and the "+" sign for the mixed modes ("rb+", "wb+", "ab+"). Additional characters may follow the sequence, although they should have no effect. For example, "t" is sometimes appended to make explicit the file is a text file. *
 
 == Related Functions ==
 :[[SDL_RWFromConstMem]] ???
